--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,7 @@ body {
 
 .header {
   position: fixed;
+  z-index: 9999;
   top: 0;
   width: 100%;
   min-width: 1000px;
@@ -414,7 +415,6 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: row;
-  height: 1500px;
 }
 .main .nav {
   width: 230px;
@@ -464,12 +464,105 @@ body {
   border-left: 6px solid rgb(255, 165, 80);
   transition: all 0.2s;
 }
+.main .nav ul a.current {
+  color: #fff;
+  background: rgb(30, 105, 185);
+}
+.main .nav ul a.current:before {
+  left: calc(100% - 12px);
+  width: 6px;
+  height: 10px;
+  border-top: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-left: 6px solid rgb(255, 165, 80);
+  transition: all 0.2s;
+}
 .main .content {
   width: 770px;
+  padding: 0 12px;
+}
+.main .content .main-image {
+  margin: 0 0 30px 0;
+}
+.main .content .main-image img {
+  width: 100%;
+}
+.main .content .info-ttl {
+  font-size: 20px;
+  padding: 0 0 0 1em;
+  color: #fff;
+  background: #c55a11;
+}
+.main .content .information {
+  height: 215px;
+  overflow: scroll;
+}
+.main .content .information ul {
+  font-size: 15px;
+  line-height: 1.6;
+}
+.main .content .information ul li {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  border-bottom: 1px dotted #000;
+  padding: 14px 0;
+}
+.main .content .information ul li span.date {
+  display: block;
+  position: relative;
+  width: 120px;
+  text-indent: 2em;
+}
+.main .content .information ul li span.date::before {
+  content: "";
+  position: absolute;
+  top: 9px;
+  left: 0.7em;
+  width: 7px;
+  height: 7px;
+  border-radius: 1em;
+  background: #ff953d;
+}
+.main .content .information ul li p {
+  width: 626px;
 }
 
 .footer {
   width: 100%;
   min-width: 1000px;
   margin: 0 auto;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+.footer .footer-inner {
+  width: 1000px;
+  padding: 30px 0;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+.footer .footer-inner address {
+  width: 33%;
+  font-size: 13px;
+  line-height: 1.6;
+}
+.footer .footer-inner address h3 {
+  font-weight: bold;
+  color: rgb(30, 105, 185);
+  border-bottom: dotted 1px rgb(90, 120, 200);
+  padding: 2px 0;
+  margin: 0 0 6px 0;
+}
+.footer .footer-inner address p.address-name {
+  font-size: 15px;
+  font-weight: bold;
+}
+.footer .copyright {
+  background: rgb(0, 162, 218);
+  font-size: 13px;
+  padding: 6px 0;
+  color: #fff;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
