--- a/css/style.css
+++ b/css/style.css
@@ -497,6 +497,7 @@ body {
 .main .content .information {
   height: 215px;
   overflow: scroll;
+  margin: 0 0 30px 0;
 }
 .main .content .information ul {
   font-size: 15px;
