--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,8 @@ body {
   min-width: 1000px;
   background: #2e75b6;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  border-top: 4px solid rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid #fff;
 }
 .header h1 {
   width: 1000px;
@@ -423,7 +425,7 @@ body {
 }
 .main .nav ul li {
   margin: 0 0 10px 0;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
   position: relative;
 }
 .main .nav ul a {
