--- a/css/style.css
+++ b/css/style.css
@@ -384,6 +384,25 @@ body {
   margin: 115px 0 0 0;
 }
 
+#pagetop span {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60px;
+  height: 60px;
+  color: #fff;
+  background: #2e75b6;
+  font-size: 16px;
+  font-weight: bold;
+  z-index: 9999;
+}
+#pagetop span:hover {
+  cursor: pointer;
+}
+
 .wrapper {
   width: 100%;
 }
@@ -422,6 +441,8 @@ body {
   width: 230px;
   background: #deebf7;
   padding: 20px 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  z-index: 50;
 }
 .main .nav ul li {
   margin: 0 0 10px 0;
@@ -482,7 +503,7 @@ body {
 }
 .main .content {
   width: 770px;
-  padding: 0 12px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 .main .content .main-image {
   margin: 0 0 30px 0;
@@ -492,6 +513,7 @@ body {
 }
 .main .content .info-ttl {
   font-size: 20px;
+  margin: 0 35px;
   padding: 0 0 0 1em;
   color: #fff;
   background: #c55a11;
@@ -499,7 +521,7 @@ body {
 .main .content .information {
   height: 215px;
   overflow: scroll;
-  margin: 0 0 30px 0;
+  margin: 0 35px 30px 35px;
 }
 .main .content .information ul {
   font-size: 15px;
@@ -537,6 +559,9 @@ body {
   min-width: 1000px;
   margin: 0 auto;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  position: relative;
+  background: #fff;
+  z-index: 100;
 }
 .footer .footer-inner {
   width: 1000px;
