--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,30 @@ body {
 	margin: 115px 0 0 0;
 }
 
+#pagetop {
+
+	span {
+		position: fixed;
+		bottom: 30px;
+		right: 30px;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 60px;
+		height: 60px;
+		color: #fff;
+		background: #2e75b6;
+		font-size: 16px;
+		font-weight: bold;
+		z-index: 9999;
+
+		&:hover {
+			cursor: pointer;
+		}
+	}
+}
+
 .wrapper {
 	width: 100%;
 }
@@ -57,6 +81,8 @@ body {
 		width: 230px;
 		background: #deebf7;
 		padding: 20px 10px;
+		box-shadow: 0 0 5px rgb(0 0 0 / 30%);
+		z-index: 50;
 
 		ul {
 			li {
@@ -128,7 +154,7 @@ body {
 
 	.content {
 		width: 770px;
-		padding: 0 12px;
+		box-shadow: 0 0 5px rgb(0 0 0 / 30%);
 
 		.main-image {
 			margin: 0 0 30px 0;
@@ -140,7 +166,7 @@ body {
 
 		.info-ttl {
 			font-size: 20px;
-			// margin: 0 0 10px 0;
+			margin: 0 35px;
 			padding: 0 0 0 1em;
 			color: #fff;
 			background: #c55a11;
@@ -150,7 +176,7 @@ body {
 		.information {
 			height: 215px;
 			overflow: scroll;
-			margin: 0 0 30px 0;
+			margin: 0 35px 30px 35px;
 
 			ul {
 				font-size: 15px;
@@ -196,6 +222,9 @@ body {
 	min-width: 1000px;
 	margin: 0 auto;
 	box-shadow: 0 0 5px rgb(0 0 0 / 30%);
+	position: relative;
+	background: #fff;
+	z-index: 100;
 
 	.footer-inner {
 		width: 1000px;
