--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,9 @@ body {
      -moz-text-size-adjust: 100%;
           text-size-adjust: 100%;
   margin: 115px 0 0 0;
+  background-image: url("../img/gradient.png");
+  background-position: top center;
+  background-repeat: repeat-x;
 }
 
 #pagetop span {
@@ -504,6 +507,7 @@ body {
 .main .content {
   width: 770px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  background: #fff;
 }
 .main .content .main-image {
   margin: 0 0 30px 0;
@@ -588,7 +592,7 @@ body {
   font-weight: bold;
 }
 .footer .copyright {
-  background: rgb(0, 162, 218);
+  background: #2e75b6;
   font-size: 13px;
   padding: 6px 0;
   color: #fff;
