--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,10 @@ body {
 	line-height: 1.75;
 	text-size-adjust: 100%;
 	margin: 115px 0 0 0;
+
+	background-image: url("../img/gradient.png");
+	background-position: top center;
+	background-repeat: repeat-x;
 }
 
 #pagetop {
@@ -155,6 +159,7 @@ body {
 	.content {
 		width: 770px;
 		box-shadow: 0 0 5px rgb(0 0 0 / 30%);
+		background: #fff;
 
 		.main-image {
 			margin: 0 0 30px 0;
@@ -255,7 +260,7 @@ body {
 	}
 
 	.copyright {
-		background: rgb(0, 162, 218);
+		background: #2e75b6;
 		font-size: 13px;
 		padding: 6px 0;
 		color: #fff;
