--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,7 @@ body {
 	background-image: url("../img/gradient.png");
 	background-position: top center;
 	background-repeat: repeat-x;
+	background-attachment: fixed;
 }
 
 #pagetop {
@@ -56,7 +57,7 @@ body {
 	background: #2e75b6;
 	box-shadow: 0 0 5px rgb(0 0 0 / 30%);
 	border-top: 4px solid rgb(0 0 0 / 30%);
-	border-bottom: 1px solid #fff;
+	// border-bottom: 1px solid #fff;
 
 	h1 {
 		width: 1000px;
